--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Font Awesome CDN Link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS File Link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/app.min.css">
 </head>
 
 <body>
@@ -139,10 +139,10 @@
 
 
     <!-- SWIPER -->
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script  async="async" defer="defer"  src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
     <!-- Custom JS File Link  -->
-    <script src="js/script.js"></script>
+    <script  async="async" defer="defer" src="js/app.min.js"></script>
 
 </body>
 
