--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta property="og:type" content="website" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
-    <title>Coffee</title>
+    <link href="/image/home-img-1.png" rel="shortcut icon" type="image/x-icon" />
+    <title>Coffee muối nhà bột</title>
     <!-- SWIPER -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <!-- Font Awesome CDN Link  -->
