--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 
 
     <!-- SWIPER -->
-    <script  async="async" defer="defer"  src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script   src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
     <!-- Custom JS File Link  -->
-    <script  async="async" defer="defer" src="js/app.min.js"></script>
+    <script  src="js/app.min.js"></script>
 
 </body>
 
