--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             <a href="#about">giới thiệu</a>
             <a href="#menu">menu</a>
         </nav>
-
-        <a href="#" class="btn">Đặt hàng</a>
+        <a href="https://www.facebook.com/profile.php?id=100090340866559&mibextid=ZbWKwL" target="_blank" class="btn"><i class="fab fa-facebook-f"></i> facebook</a>
     </header>
 
     <!-- HOME -->
@@ -61,30 +60,7 @@
 
     <!-- ABOUT -->
     <section class="about" id="about">
-        <h1 class="heading">Giới thiệu <span>Tại sao chọn</span></h1>
-
-        <div class="row">
-            <div class="image">
-                <img src="image/about-img.png" alt="">
-            </div>
-
-            <div class="content">
-                <h3 class="title">Tại sao chọn cafe của chúng tôi</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rerum laboriosam reprehenderit ipsa id
-                    repellat odio illum, voluptas, necessitatibus assumenda adipisci. Hic, maiores iste? Excepturi illo
-                    dolore mollitia qui quia.</p>
-                <div class="icons-container">
-                    <div class="icons">
-                        <img src="image/about-icon-1.png" alt="">
-                        <h3>Cà phê chất lượng</h3>
-                    </div>
-                    <div class="icons">
-                        <img src="image/about-icon-3.png" alt="">
-                        <h3>Miễn phí ship</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
     </section>
 
     <!-- MENU -->
@@ -92,14 +68,8 @@
         <h1 class="heading">Menu<span> menu</span></h1>
 
         <div class="box-container">
-            <a href="#" class="box">
-                <img src="image/menu-1.png" alt="">
-                <div class="content">
-                    <h3>Cà phê muối bột 250ml</h3>
-                    <p>Hương vị ngon</p>
-                    <span>20k</span>
-                </div>
-            </a>
+           
+            <img src="image/menu.jpg" width="100%" alt="">
 
 
         </div>
