--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="box">
                 <h3>Liên hệ</h3>
-                <a href="#"><i class="fab fa-facebook-f"></i> facebook</a>
+                <a href="https://www.facebook.com/profile.php?id=100090340866559&mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i> facebook</a>
             </div>
         </div>
 
