--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="coffee muối nhà bột đà nẵng, coffee muoi bot da nang,cafe muối đà nẵng , ca phe muoi bot da nang, cà phê muối bột đà nẵng, coffee đà nẵng, muối bột,cafe ngon đà nẵng" />
+    <meta name="description" content="coffee muối bột đà nẵng, coffee muoi bot da nang ,,cafe muối , ca phe muoi bot da nang, cà phê muối bột đà nẵng, coffee đà nẵng, muối bột,cafe đã nẵng muối hột" />
+    <meta property="og:title" content="coffee muối bột đà nẵng, coffee muoi bot da nang , ca phe muoi bot da nang, cà phê muối bột đà nẵng, coffee đà nẵng, muối bột,cafe muối" />
+    <meta property="og:description" content="coffee muối bột đà nẵng, coffee muoi bot da nang , ca phe muoi bot da nang, cà phê muối bột đà nẵng, coffee đà nẵng, muối bột" />
     <meta name="copyright" content="coffee muối nhà bột" />
     <meta http-equiv="audience" content="General" />
     <meta name="resource-type" content="Document" />
