--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Font Awesome CDN Link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS File Link  -->
-    <link rel="stylesheet" href="css/app.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     <header class="header">
         <div id="menu-btn" class="fas fa-bars"></div>
 
-        <a href="#" class="logo">coffee muối nhà bột <i class="fas fa-mug-hot"></i></a>
+        <a href="#" class="logo">coffee <i class="fas fa-mug-hot"></i></a>
 
         <nav class="navbar">
             <a href="#home">trang chủ</a>
@@ -42,6 +42,7 @@
             <a href="#menu">menu</a>
         </nav>
         <a href="https://www.facebook.com/profile.php?id=100090340866559&mibextid=ZbWKwL" target="_blank" class="btn"><i class="fab fa-facebook-f"></i> facebook</a>
+		<a href="https://shopeefood.vn/da-nang/nha-bot-ca-phe-muoi-30-than-nhan-trung" target="_blank" class="btn"><i class="fa fa-shopping-cart"></i> shopeefood</a>
     </header>
 
     <!-- HOME -->
