--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
             <a href="#about">giới thiệu</a>
             <a href="#menu">menu</a>
         </nav>
-        <a href="https://www.facebook.com/profile.php?id=100090340866559&mibextid=ZbWKwL" target="_blank" class="btn"><i class="fab fa-facebook-f"></i> facebook</a>
-		<a href="https://shopeefood.vn/da-nang/nha-bot-ca-phe-muoi-30-than-nhan-trung" target="_blank" class="btn"><i class="fa fa-shopping-cart"></i> shopeefood</a>
+        <a href="https://www.facebook.com/profile.php?id=100090340866559&mibextid=ZbWKwL" target="_blank" class="btn" style="background: #1877f2; color: #ffffff;border: none;"><i class="fab fa-facebook-f"></i> facebook</a>
+		<a href="https://shopeefood.vn/da-nang/nha-bot-ca-phe-muoi-30-than-nhan-trung" target="_blank" class="btn" style="background-color: #ef5a3c;
+        color: #ffffff;
+        border: none;"><i class="fa fa-shopping-cart"></i> shopeefood</a>
     </header>
 
     <!-- HOME -->
